...
            "state" : "translated",
            "value" : "Mantenga presionado el botón de Bluetooth durante 3 segundos para activar el modo de emparejamiento."
          }
        }
      }
    },
    "Home" : {
      "comment" : "Displayed in the tab item label and navigation title of the Dashboard view.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
...
    "NOTIFICATION_PERMISSIONS_TITLE" : {
      "comment" : "The text displayed in the title of the NotificationPermission OnboardingView.",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notificaciones"
...
            "state" : "translated",
            "value" : "Reciba actualizaciones cuando cambien los medicamentos y las recomendaciones actuales."
          }
        }
      }
    },
    "Recent Vitals" : {
      "comment" : "The text displayed in the header of the RecentVitalsSection view.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Signos vitales recientes"
...
            "state" : "translated",
            "value" : "Compartir enlace"
          }
        }
      }
    },
    "Show less" : {
      "comment" : "The text displayed on the ShowMoreButton if content is expanded.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mostrar menos"
...
        }
      }
    },
    "Show Measurements" : {

    },
    "Show more" : {
      "comment" : "The text displayed on the ShowMoreButton if content is collapsed.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mostrar más"
...
            "state" : "translated",
            "value" : "Tendencias"
          }
        }
      }
    },
    "Trigger Blood Pressure Measurement" : {

    },
    "Trigger Sheet" : {
      "comment" : "The text displayed on the button to open the AddMeasurementView.",
      "localizations" : {
        "es" : {
...
            "state" : "translated",
            "value" : "Hoja de activación"
          }
        }
      }
    },
    "Trigger Weight Measurement" : {

    },
    "twice daily" : {
      "comment" : "Schedule frequency",
      "localizations" : {
        "es" : {
...
