...
    
    
    var body: some View {
        Button {
            dismiss()
        } label: {
            Text("Discard")
                .foregroundStyle(viewState == .idle ? Color.red : Color.gray)
        }
            .disabled(viewState != .idle)
    }
}

...
    
    @Environment(MeasurementManager.self) private var measurementManager

    var body: some View {
        VStack {
            AsyncButton(state: $viewState, action: confirm) {
                Text("Save")
                    .frame(maxWidth: .infinity, maxHeight: buttonHeight)
                    .font(.title2)
                    .bold()
            }
               .buttonStyle(.borderedProminent)
            
...
