...
                WeightMeasurementLabel(sample)
            case let .bloodPressure(bloodPressure, heartRate):
                BloodPressureMeasurementLabel(bloodPressure, heartRate: heartRate)
            }
            
            if dynamicTypeSize < .accessibility4 {
                Text("Measurement Recorded")
                    .font(.title3)
                    .foregroundStyle(.secondary)
            }
        }
            .multilineTextAlignment(.center)
    }
...
