...
                label: {
                    Image(systemName: "xmark")
                        .resizable()
                        .scaledToFit()
                        .frame(width: labelSize, height: labelSize)
                        .foregroundStyle(.accent)
                        .accessibilityLabel("XButton")
                }
            )
        }
    }
    
    
...
